--- a/claudiaHelloWorld/src/main/config/claudiaClient.properties
+++ b/claudiaHelloWorld/src/main/config/claudiaClient.properties
@@ -25,3 +25,11 @@ acd.port=3500
 claudia.environment.disk=/dev/sdc
 claudia.environment.folder=/mnt/environment
 
+# Auth properties
+claudia.auth=false
+claudia.proxy=https://localhost:8444/claudia/pswd
+claudia.certpath=/opt/claudia/extraFiles/user/
+claudia.cert=stratuslab-test-user.p12
+claudia.certtype=pkcs12
+login=username
+password=password
