Prevent tcloud-server-rpm from overwriting the configuration files on updating

--- a/tcloud-server-rpm/pom.xml
+++ b/tcloud-server-rpm/pom.xml
@@ -233,6 +233,29 @@
 						</mapping>
 
 					</mappings>
+<!--
+	Fix overwriting custom configuration files:
+-->
+	<preinstallScriptlet>
+		<script>
+export CUSTOM_PR_FILE=${app.home}/conf/tcloud.properties
+[ -e $CUSTOM_PR_FILE ] &amp;&amp; mv $CUSTOM_PR_FILE $CUSTOM_PR_FILE.old
+echo ""
+		</script>
+	</preinstallScriptlet>
+	<postinstallScriptlet>
+		<script>
+export OLD_PR_FILE=${app.home}/conf/tcloud.properties.old
+export CUSTOM_PR_FILE=${app.home}/conf/tcloud.properties
+[ -e $OLD_PR_FILE ] &amp;&amp; mv $CUSTOM_PR_FILE $CUSTOM_PR_FILE.inst &amp;&amp; mv $OLD_PR_FILE $CUSTOM_PR_FILE
+echo ""
+		</script>
+	</postinstallScriptlet>
+<!--
+	End Fix overwriting custom configuration files:
+-->
+
+
 				</configuration>
 			</plugin>
 
