change in the tcloudproperty

--- a/tcloud-server/src/main/config/tcloud.properties
+++ b/tcloud-server/src/main/config/tcloud.properties
@@ -35,6 +35,7 @@ oneUrl=http://localhost:2633/RPC2
 oneUser=OCCIServer
 oneBridge=br1
 onePassword=42d9d2622f862cd803d4395be2c1edd362213525
+oneNetworkBridge=br0
 #oneEnvironmentPath=/home/claudia/tcloud/repository
 oneEnvironmentPath=/opt/claudia/repository
 oneKernel=/boot/vmlinuz-2.6.26-2-xen-amd64
@@ -70,6 +71,9 @@ monitoring.wasup.password=rps1
 #secretKey=
 #accessKey=
 
+netInitScript0=/opt/claudia/extraFiles/netinit0.sh
+netInitScript1=/opt/claudia/extraFiles/netinit1.sh
+oneScriptPath=/opt/claudia/extraFiles
 
 #Flexiscale Driver Configuration Section
 flexiscaleUser=4caast@flexiant.com
