--- a/pom.xml
+++ b/pom.xml
@@ -32,6 +32,11 @@ grid certificates, and VOMS proxies.
 		<module>configurators</module>
 		<module>clotho</module>
 		<module>reportclient</module>
+				<module>tcloud-server-rpm</module>
+				<module>claudia-client-rpm</module>
+				<module>clotho-rpm</module>
+				<module>reportclient-rpm</module>
+				<module>claudia-common-rpm</module>
 	</modules>
 
 	<profiles>
