change for oneinit

--- a/clotho/src/main/config/sm.properties
+++ b/clotho/src/main/config/sm.properties
@@ -69,4 +69,5 @@ paasaware=true
 monitoring=true
 #monitoringurl=http://109.231.67.227:8080/registerfqn4monitoring_ws/webresources/maps2fqn/
 monitoringurl=http://84.21.173.132:4453/datasource-manager/datasource
+monitoringclass=com.telefonica.claudia.slm.paas.vmiHandler.NUBAMonitoringClient
 
