--- a/clotho/pom.xml
+++ b/clotho/pom.xml
@@ -152,6 +152,11 @@
       <artifactId>asm</artifactId>
     </dependency>
 
+   <dependency>
+      <groupId>commons-httpclient</groupId>
+      <artifactId>commons-httpclient</artifactId>
+    </dependency>
+    
     <dependency>
       <groupId>asm</groupId>
       <artifactId>asm-attrs</artifactId>
