--- a/reportclient/.settings/org.maven.ide.eclipse.prefs
+++ b/reportclient/.settings/org.maven.ide.eclipse.prefs
@@ -1,4 +1,4 @@
-#Thu Apr 07 08:53:59 CEST 2011
+#Sat Nov 26 17:39:39 CET 2011
 activeProfiles=
 eclipse.preferences.version=1
 fullBuildGoals=process-test-resources
