--- a/clotho/pom.xml
+++ b/clotho/pom.xml
@@ -103,23 +103,26 @@
     </dependency>
     
    <dependency>
-      <groupId>hibernate-annotations</groupId>
-      <artifactId>hibernate-annotations</artifactId>
+     <groupId>org.hibernate</groupId>
+     <artifactId>hibernate-annotations</artifactId>
+     <version>3.2.1.ga</version>
     </dependency>
 
-    <dependency>
-      <groupId>hibernate-entitymanager</groupId>
-      <artifactId>ejb3-persistence</artifactId>
-    </dependency>
+  <dependency>
+	<groupId>org.hibernate</groupId>
+	<artifactId>ejb3-persistence</artifactId>
+	<version>1.0.2.GA</version>
+</dependency>
+
+   <dependency>
+	<groupId>org.hibernate</groupId>
+	<artifactId>hibernate-entitymanager</artifactId>
+	<version>3.6.8.Final</version>
+</dependency>
 
     <dependency>
-        <groupId>hibernate-entitymanager</groupId>
-        <artifactId>hibernate-entitymanager</artifactId>
-    </dependency>
-
-    <dependency>
-        <groupId>hibernate</groupId>
-        <artifactId>hibernate3</artifactId>
+       <groupId>org.hibernate</groupId>
+	<artifactId>hibernate</artifactId>
     </dependency>
 
     <dependency>
@@ -138,9 +141,10 @@
     </dependency>
 
     <dependency>
-      <groupId>cglib</groupId>
-      <artifactId>cglib</artifactId>
-    </dependency>
+	<groupId>cglib</groupId>
+	<artifactId>cglib</artifactId>
+	<version>2.2</version>
+</dependency>
 
     <dependency>
       <groupId>concurrent</groupId>
@@ -345,11 +349,17 @@
        <name>Central</name>
        <url>http://repo1.maven.org/maven2/</url>
     </repository>
+    
+      <repository>
+        <id>JBoss</id>
+        <name>jboss-maven2-release-repository</name>
+        <url>https://repository.jboss.org/nexus/content/repositories/deprecated</url>
+      </repository>
 
    <repository>
         <id>public</id>
         <name>JBoss PUblic Nexus Repository</name>
-        <url>https://repository.jboss.org/nexus/content/groups/public/</url>
+        <url>https://repository.jboss.org/nexus/content/groups/public</url>
       </repository>
   </repositories>
 
