--- a/clotho/pom.xml
+++ b/clotho/pom.xml
@@ -102,7 +102,7 @@
       <artifactId>persistence-api</artifactId>
     </dependency>
     
-   <dependency>
+  <!-- <dependency>
      <groupId>org.hibernate</groupId>
      <artifactId>hibernate-annotations</artifactId>
      <version>3.2.1.ga</version>
@@ -123,7 +123,32 @@
     <dependency>
        <groupId>org.hibernate</groupId>
 	<artifactId>hibernate</artifactId>
+    </dependency>-->
+    
+    <dependency>
+      <groupId>hibernate-annotations</groupId>
+      <artifactId>hibernate-annotations</artifactId>
+     <!-- <version>3.2.1.GA</version> --> 
     </dependency>
+
+    <dependency>
+      <groupId>hibernate-entitymanager</groupId>
+      <artifactId>ejb3-persistence</artifactId>
+     <!-- <version>3.3.2.GA</version> --> 
+    </dependency>
+
+    <dependency>
+        <groupId>hibernate-entitymanager</groupId>
+        <artifactId>hibernate-entitymanager</artifactId>
+      <!--  <version>3.2.1.GA</version> --> 
+    </dependency>
+
+    <dependency>
+        <groupId>hibernate</groupId>
+        <artifactId>hibernate3</artifactId>
+       <!--  <version>3.2.3.GA</version>--> 
+    </dependency>
+    
 
     <dependency>
        <groupId>dom4j</groupId>
