--- a/tcloud-server/src/main/config/tcloud.properties
+++ b/tcloud-server/src/main/config/tcloud.properties
@@ -2,7 +2,7 @@
 #--------------------------------------------------------------------------------------
 # Drivers
 com.telefonica.claudia.smi.drivers.taskManager=com.telefonica.claudia.smi.task.ClaudiaTaskManager
- com.telefonica.claudia.smi.drivers.deployment=com.telefonica.claudia.smi.deployment.SMDeploymentDriver
+ #com.telefonica.claudia.smi.drivers.deployment=com.telefonica.claudia.smi.deployment.SMDeploymentDriver
 # com.telefonica.claudia.smi.drivers.provisioning=com.telefonica.claudia.smi.provisioning.SMProvisioningDriver
 # com.telefonica.claudia.smi.drivers.monitoring=com.telefonica.claudia.smi.monitoring.SMMonitoringDriver
 # com.telefonica.claudia.smi.drivers.monitoring=com.telefonica.claudia.smi.monitoring.VMWareMonitoringDriver
@@ -11,8 +11,8 @@ com.telefonica.claudia.smi.drivers.taskManager=com.telefonica.claudia.smi.task.C
 # com.telefonica.claudia.smi.drivers.provisioning=com.telefonica.claudia.smi.provisioning.AmazonProvisioningDriver
 # com.telefonica.claudia.smi.drivers.templateManagement=com.telefonica.claudia.smi.templateManagement.VMWareTemplateManagementDriver
 # com.telefonica.claudia.smi.drivers.console=com.telefonica.claudia.smi.console.VMWareConsoleDriver
-com.telefonica.claudia.smi.drivers.provisioning=com.telefonica.claudia.smi.provisioning.ONEProvisioningDriver
-com.telefonica.claudia.smi.drivers.monitoring=com.telefonica.claudia.smi.monitoring.OneMonitoringDriver
+#com.telefonica.claudia.smi.drivers.provisioning=com.telefonica.claudia.smi.provisioning.ONEProvisioningDriver
+com.telefonica.claudia.smi.drivers.monitoring=com.telefonica.claudia.driver_mon.SMMonitoringNoJMSDriver
 
 
 # Server the TCloud is installed in.
