--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>eu.stratuslab.pkgs.claudia</groupId>
 	<artifactId>claudia-parent</artifactId>
-	<version>1.9-SNAPSHOT</version>
+	<version>1.8-SNAPSHOT</version>
 	<name>claudia-parent</name>
 
 	<url>http://claudia.morfeo-project.org</url>
@@ -131,6 +131,13 @@ grid certificates, and VOMS proxies.
 				<artifactId>org.mortbay.jetty</artifactId>
 				<version>5.0.0</version>
 			</dependency>
+			
+			<dependency>
+			<groupId>eu.stratuslab.pkgs.claudia</groupId>
+            <artifactId>claudia-model</artifactId>
+             <version>0.1.8-SNAPSHOT</version>
+		    </dependency>  
+			
 
 			<dependency>
 				<groupId>com.noelios.restlet</groupId>
@@ -171,18 +178,18 @@ grid certificates, and VOMS proxies.
 			<dependency>
 				<groupId>eu.stratuslab.pkgs.claudia</groupId>
 				<artifactId>ovf-manager</artifactId>
-				<version>0.9-SNAPSHOT</version>
+				<version>0.8-SNAPSHOT</version>
 			</dependency>
 
 			<dependency>
 				<groupId>eu.stratuslab.pkgs.claudia</groupId>
 				<artifactId>claudia-commons</artifactId>
-				<version>0.1.9-SNAPSHOT</version>
+				<version>0.1.8-SNAPSHOT</version>
 			</dependency>
 			<dependency>
 				<groupId>eu.stratuslab.pkgs.claudia</groupId>
 				<artifactId>clotho</artifactId>
-				<version>0.1.9-SNAPSHOT</version>
+				<version>0.1.8-SNAPSHOT</version>
 			</dependency>
 
 			<dependency>
@@ -403,7 +410,7 @@ grid certificates, and VOMS proxies.
 			<dependency>
 				<groupId>eu.stratuslab.pkgs.claudia</groupId>
 				<artifactId>tcloud-server</artifactId>
-				<version>0.1.9-SNAPSHOT</version>
+				<version>0.1.8-SNAPSHOT</version>
 				<scope>provided</scope>
 			</dependency>
 
