--- a/clotho/pom.xml
+++ b/clotho/pom.xml
@@ -102,52 +102,62 @@
       <artifactId>persistence-api</artifactId>
     </dependency>
     
-  <!-- <dependency>
-     <groupId>org.hibernate</groupId>
-     <artifactId>hibernate-annotations</artifactId>
-     <version>3.2.1.ga</version>
+      <dependency>
+      <groupId>javax.persistence</groupId>
+      <artifactId>persistence-api</artifactId>
     </dependency>
-
-  <dependency>
-	<groupId>org.hibernate</groupId>
-	<artifactId>ejb3-persistence</artifactId>
-	<version>1.0.2.GA</version>
-</dependency>
-
-   <dependency>
-	<groupId>org.hibernate</groupId>
-	<artifactId>hibernate-entitymanager</artifactId>
-	<version>3.6.8.Final</version>
-</dependency>
-
-    <dependency>
-       <groupId>org.hibernate</groupId>
-	<artifactId>hibernate</artifactId>
-    </dependency>-->
     
-    <dependency>
+   <dependency>
       <groupId>hibernate-annotations</groupId>
       <artifactId>hibernate-annotations</artifactId>
-     <!-- <version>3.2.1.GA</version> --> 
     </dependency>
 
     <dependency>
       <groupId>hibernate-entitymanager</groupId>
       <artifactId>ejb3-persistence</artifactId>
-     <!-- <version>3.3.2.GA</version> --> 
     </dependency>
 
     <dependency>
         <groupId>hibernate-entitymanager</groupId>
         <artifactId>hibernate-entitymanager</artifactId>
-      <!--  <version>3.2.1.GA</version> --> 
     </dependency>
 
     <dependency>
         <groupId>hibernate</groupId>
         <artifactId>hibernate3</artifactId>
-       <!--  <version>3.2.3.GA</version>--> 
     </dependency>
+    
+    <dependency>
+		<groupId>cglib</groupId>
+		<artifactId>cglib</artifactId>
+		<version>2.1.3</version>
+	</dependency>
+    
+    
+    
+  <!--   <dependency>
+      <groupId>hibernate-annotations</groupId>
+      <artifactId>hibernate-annotations</artifactId>
+      <version>3.2.1.GA</version> 
+    </dependency>
+
+    <dependency>
+      <groupId>hibernate-entitymanager</groupId>
+      <artifactId>ejb3-persistence</artifactId>
+      <version>3.3.2.GA</version> 
+    </dependency>
+
+    <dependency>
+        <groupId>hibernate-entitymanager</groupId>
+        <artifactId>hibernate-entitymanager</artifactId>
+       <version>3.2.1.GA</version> 
+    </dependency>
+
+    <dependency>
+        <groupId>hibernate</groupId>
+        <artifactId>hibernate3</artifactId>
+      <version>3.2.3.GA</version>
+    </dependency>--> 
     
 
     <dependency>
@@ -165,12 +175,7 @@
       <artifactId>javassist</artifactId>
     </dependency>
 
-    <dependency>
-	<groupId>cglib</groupId>
-	<artifactId>cglib</artifactId>
-	<version>2.2</version>
-</dependency>
-
+  
     <dependency>
       <groupId>concurrent</groupId>
       <artifactId>concurrent</artifactId>
