--- a/reportclient/pom.xml
+++ b/reportclient/pom.xml
@@ -199,6 +199,24 @@
        <name>Public online Java net repository</name>
        <url>http://download.java.net/maven/2/</url>
     </repository>
+    
+        <repository>
+       <id>central</id>
+       <name>Central</name>
+       <url>http://repo1.maven.org/maven2/</url>
+    </repository>
+    
+      <repository>
+        <id>JBoss</id>
+        <name>jboss-maven2-release-repository</name>
+        <url>https://repository.jboss.org/nexus/content/repositories/deprecated</url>
+      </repository>
+
+   <repository>
+        <id>public</id>
+        <name>JBoss PUblic Nexus Repository</name>
+        <url>https://repository.jboss.org/nexus/content/groups/public</url>
+      </repository>
 
   </repositories>
 
