--- a/driver-one/pom.xml
+++ b/driver-one/pom.xml
@@ -13,6 +13,10 @@
     <version>1.13-SNAPSHOT</version>
   </parent>
 
+  <properties>
+     <skipTests>true</skipTests>
+  </properties>
+
   <dependencies>
     <dependency>
       <groupId>junit</groupId>
@@ -61,6 +65,15 @@
 
   <build>
     <plugins>
+
+        <plugin>
+           <groupId>org.apache.maven.plugins</groupId>
+           <artifactId>maven-surefire-plugin</artifactId>
+           <version>2.11</version>
+           <configuration>
+              <skipTests>${skipTests}</skipTests>
+           </configuration>
+        </plugin>
 
 	<plugin>
 	  <groupId>org.apache.maven.plugins</groupId>
