--- a/pom.xml
+++ b/pom.xml
@@ -33,7 +33,7 @@ grid certificates, and VOMS proxies.
 		<module>clotho</module>
 		<module>reportclient</module>
 		<module>claudia-model</module>
-		<!--  <module>driver-mon</module>-->
+		 <module>driver-mon</module>
         <module>tcloud-server-rpm</module>
 		<module>claudia-client-rpm</module>
 		<module>clotho-rpm</module>
