--- a/reportclient-rpm/pom.xml
+++ b/reportclient-rpm/pom.xml
@@ -225,7 +225,7 @@ echo ""
 	<properties>
 		<app.home>/opt/claudia/</app.home>
     <maven.build.timestamp.format>yyyyMMdd.HHmmss</maven.build.timestamp.format>
-    <RELEASE>0.${maven.build.timestamp}</RELEASE>
+    <RELEASE>0.${maven.build.timestamp}.${package.os}</RELEASE>
 	</properties>
 
 </project>
