--- a/claudia-client-rpm/pom.xml
+++ b/claudia-client-rpm/pom.xml
@@ -6,7 +6,7 @@
   <artifactId>claudia-client-rpm</artifactId>
   <version>0.1.14-SNAPSHOT</version>
   <name>Claudia Client RPM Packaging</name>
-  <packaging>rpm</packaging>
+  <packaging>pom</packaging>
 
   <parent>
     <groupId>eu.stratuslab.pkgs.claudia</groupId>
