--- a/reportclient-rpm/pom.xml
+++ b/reportclient-rpm/pom.xml
@@ -6,7 +6,7 @@
 	<artifactId>reportclient-rpm</artifactId>
 	<version>0.1.14-SNAPSHOT</version>
 	<name>Report client RPM Package</name>
-	<packaging>rpm</packaging>
+	<packaging>pom</packaging>
 
 	<parent>
 		<groupId>eu.stratuslab.pkgs.claudia</groupId>
