--- a/tcloud-server-rpm/pom.xml
+++ b/tcloud-server-rpm/pom.xml
@@ -6,7 +6,7 @@
 	<artifactId>tcloud-server-rpm</artifactId>
 	<version>0.1.14-SNAPSHOT</version>
 	<name>TCloud Server RPM Package</name>
-	<packaging>rpm</packaging>
+	<packaging>pom</packaging>
 
 	<parent>
 		<groupId>eu.stratuslab.pkgs.claudia</groupId>
