--- a/pom.xml
+++ b/pom.xml
@@ -41,6 +41,14 @@ grid certificates, and VOMS proxies.
 		<module>claudia-common-rpm</module>
 	</modules>
 
+	<repositories>
+		<repository>
+			<id>maven-restlet</id>
+			<name>Public online Restlet repository</name>
+			<url>http://maven.restlet.org</url>
+		</repository>
+	</repositories>
+
 	<profiles>
 		<profile>
 			<id>build-rpm</id>
